refactor code + added bad word list
fixed flex box issues and added bad word filter, users will now be barred from updating their bio and hobbies to bad words

--- a/contacts.html
+++ b/contacts.html
@@ -33,11 +33,11 @@
               <a href="profile.html" class="btn btn-outlined-orange me-2">
                 Profile
               </a>
-              <a href="match-tool.html" class="btn btn-outlined-orange">
+              <a href="match-tool.html" class="btn btn-outlined-orange me-2">
                 Match Tool
               </a>
-              <a href="chat-only.html" class="btn btn-outlined-orange">
-                Chat
+              <a href="chat.html" class="btn btn-outlined-orange">
+                Chatroom
               </a>
             </div>
           </div>
