--- a/profile.html
+++ b/profile.html
@@ -40,11 +40,11 @@
             <a href="profile.html" class="btn btn-outlined-orange me-2 active">
               Profile
             </a>
-            <a href="match-tool.html" class="btn btn-outlined-orange">
+            <a href="match-tool.html" class="btn btn-outlined-orange me-2">
               Match Tool
             </a>
-            <a href="chat-only.html" class="btn btn-outlined-orange">
-              Chat
+            <a href="chat.html" class="btn btn-outlined-orange">
+              Chatroom
             </a>
           </div>
         </div>
@@ -95,7 +95,7 @@
                   <div class="bio btn-outlined-orange text-center mt-5 w-100">
                     <h3 class="text-black">
                       Bio: <span id="biofield">
-                        Hi, I’m Sivar, I enjoy painting, swimming, football.
+                        Hi, I'm Sivar, I enjoy painting, swimming, football.
                       I am also interested in finding new hobbies.
                       </span>
                     </h3>
