changed login.html to index.html

--- a/about-us.html
+++ b/about-us.html
@@ -26,7 +26,7 @@
             <a href="register.html" class="btn btn-outlined-orange me-2">
               Register
             </a>
-            <a href="login.html" class="btn btn-outlined-orange">
+            <a href="index.html" class="btn btn-outlined-orange">
               Login
             </a>
           </div>
