--- a/profile.html
+++ b/profile.html
@@ -103,7 +103,7 @@
 
                   <div class="mt-5 text-end">
                     <a
-                      href="login.html"
+                      href="index.html"
                       class="btn btn-outlined-orange border-red text-white bg-danger"
                     >
                       Sign Out
