--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
             <a href="about-us.html" class="btn btn-outlined-orange me-2">
               About Us
             </a>
-            <a href="login.html" class="btn btn-outlined-orange">
+            <a href="index.html" class="btn btn-outlined-orange">
               Login
             </a>
           </div>
@@ -36,7 +36,7 @@
     <!-- register form -->
     <section class="register-form py-5 h-screen d-flex justify-content-center align-items-center">
       <div class="container">
-        <form action="login.html" class="col-md-8 mx-auto">
+        <form action="index.html" class="col-md-8 mx-auto">
           <div class="input-group mb-4 w-100 btn-outlined-orange">
             <label for="username" class="text-black">
               Username
